# biz/handler/contract/contract_service.go
@@ -138,3 +138,28 @@ func ContractByID(ctx context.Context, c *app.RequestContext) {
 	utils.SendResponse(c, errno.Success, info, 0, "")
 	return
 }
+
+// ContractDel .
+//
+// @Summary 删除合同
+// @Description 删除合同
+// @Param request body base.IDReq true "query params"
+// @Success 200 {object} utils.Response
+// @router /service/contract/del [POST]
+func ContractDel(ctx context.Context, c *app.RequestContext) {
+	var err error
+	var req base.IDReq
+	err = c.BindAndValidate(&req)
+	if err != nil {
+		c.String(consts.StatusBadRequest, err.Error())
+		return
+	}
+
+	err = service.NewContract(ctx, c).Delete(req.ID)
+	if err != nil {
+		utils.SendResponse(c, errno.ConvertErr(err), nil, 0, "")
+		return
+	}
+	utils.SendResponse(c, errno.Success, nil, 0, "")
+	return
+}
